--- a/style.css
+++ b/style.css
@@ -7,3 +7,29 @@
 .checked {
     color: orange;
   }
+
+
+.bg{
+    background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+}  
+
+.cart-bg{
+    /* background: rgb(43,29,253);
+background: linear-gradient(90deg, rgba(43,29,253,1) 18%, rgba(58,180,179,1) 58%, rgba(69,140,252,1) 100%); */
+background: rgb(135,210,197);
+background: linear-gradient(90deg, rgba(135,210,197,1) 29%, rgba(58,180,70,1) 54%, rgba(252,164,69,1) 86%);
+}
+img{
+    transition-duration: 2s;
+}
+
+img:hover{
+    /* border: 2px black solid; */
+    /* transform: scale3D(0.8); */
+    transform: scaleX(1.1);
+    transform: scaleY(1.1);
+    border: 1px blanchedalmond solid;
+    box-shadow: 2px 2px 10px black;
+    
+}
